--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,8 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 33
 
+    namespace 'xyz.justsoft.video_thumbnail'
+    
     defaultConfig {
         minSdkVersion 16
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
